--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,6 +11,16 @@
     height: 100%;
     z-index: 2;
 }
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
 .spawn {
     position: absolute;
     font-size: 0.8em;
